# video-pipeline

./: .gitignore  README.md  pipeline.ipynb  pyproject.toml  requirements.txt
sandbox/: main.py  notebook.ipynb  pipeline.ipynb
src/: AudioAligner.py  Audio_speechbrain.py  Audio_webrtc.py  Combine.py  Graph.py  Noise.py  NoiseEliminator.py  Processing.py
